---------------------------------------------------------------------------------------------------
Version: 1.8.6
Date: xx xxxx 2024
  Compatibility:
    - [K2] Balanced 'Advanced Tech Cards' to require 10->1 Lithium Battery Pack
---------------------------------------------------------------------------------------------------
Version: 1.8.5
Date: 10 January 2024
  Bugfixes:
    - Fixed crash when loading a save while Milestones mod is enabled (thanks fgardt)
---------------------------------------------------------------------------------------------------
Version: 1.8.4
Date: 10 January 2024
  Bugfixes:
    - Removed fake module slots in the dredger platform showing up in Extended Descriptions (thanks Dimava)
    - Fixed dredger being deconstructable using deconstruction planner (thanks Dimava)
  Compatibility:
    - Added support for Picker Dollies
    - Added support for Better Victory Screen
    - [K2] Transport tech cards now have glow and correct name (thanks fgardt)
---------------------------------------------------------------------------------------------------
Version: 1.8.3
Date: 8 December 2023
  Compatibility:
    - [BZ] When BZ-tin is enable, recipes with lead will not be reverted to iron
    - [K2] Added setting to enable/disable lead ingredients in early ammos
    - [K2] Reduced stack sizes of tech cards/research data
    - [PF] Added compatibility with Brim Stuff, Lasing Around, and Them Thar Hills by Planetfall
    - [RSC] Fixed rocket silo stage 1 not advancing in its own progress
---------------------------------------------------------------------------------------------------
Version: 1.8.2
Date: 9 November 2023
  Bugfixes:
    - Actually fixed crash on load with MSI2
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 8 November 2023
  Features:
    - Added map rechart on migration to reveal rocket silo holes in already-mapped chunks
  Bugfixes: