@@ -22,4 +22,5 @@ require "__FreightForwarding__.compatibility.planetfall.data-updates"
 require "__FreightForwarding__.compatibility.plutonium-energy.data-updates"
 require "__FreightForwarding__.compatibility.rocket-silo-construction.data-updates"
 require "__FreightForwarding__.compatibility.train-construction-site.data-updates"
+require "__FreightForwarding__.compatibility.true-nukes.data-updates"
 require "__FreightForwarding__.compatibility.underwater-pipes.data-updates"
